--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   2x2-comeon:
-    image: ${IMAGE_BASE}
+    build: .
     restart: always
     ports:
       - "5174:5174"
